--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Wasaaaaaaaaaaaa</title>
-</head>
-<body>
-<h1>el deploy puto funciona</h1>
+{% extends "bootstrap/base.html" %}
+{% block title %}Spotify cover downloader{% endblock %}
 
-</body>
-</html>
+{% block navbar %}
+{{nav.mynavbar.render()}}
+{% endblock %}
+
+{% block content %}
+
+<div class="container" align="left">
+    <a href="/return-file/" target="blank">
+        <button class="btn btn-default">
+            Download
+        </button>
+    </a>
+</div>
+
+{% endblock %}
+
+
